--- a/css/main.css
+++ b/css/main.css
@@ -107,4 +107,56 @@
    margin: 1em;
    
  }
+ .blog{
+   margin: 4em 0;
+   position: relative;
+ }
+ .blog h1{
+   color: #F97300;
+   margin:2em;
+   
+ }
+  .blog .card{
+    box-shadow: 0px 0px 20px #ccc;
+  }
+  .blog .card img{
+    width:100%;
+    height:12em;
+  }
+  .blog .card-title{
+    color:#F97300;
+
+  }
+  .blog .card-body{
+    padding: 1em;
+ }
+ .team{
+  margin: 4em 0;
+  position: relative;  
+ }
+ .team h1{
+  color:#F97300;
+  margin: 2em; 
+ }
+ .team .item{
+  position: relative;
+ }
+ .team .des{
+  background: #F97300;
+  color: #fff;
+  text-align: center;
+  border-bottom-left-radius: 93%;
+  transition:.3s ease-in-out;
+  
+ }
+ .team .item:hover .des{
+   height:100%;
+   background: #F973007d;
+   position: absolute;
+   width:89%;
+   padding: 5em;
+   top:0;
+   border-bottom-left-radius: 0;
+ }
+ 
  
